# ru-highres

./: .gitignore  AGENTS.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: pilot-scan.yml  test.yml
analyses/openneuro_resolution_benchmark/: README.md
analyses/openneuro_resolution_benchmark/figures/: README.md
analyses/openneuro_resolution_benchmark/results/: README.md  dataset_resolution_sensitivity.csv  dataset_resolution_single_band_summary.csv  dataset_resolution_summary.parquet  scan_summary.json  single_band_reference_rankings.csv
analyses/openneuro_resolution_benchmark/src/openneuro_voxels/: aggregate.py  bids_entities.py  cli.py  database.py  nifti_header.py  reporting.py  s3.py  scan.py  sidecars.py  validation.py
analyses/openneuro_resolution_benchmark/tests/: conftest.py  test_aggregation.py  test_orientation.py  test_resume.py  test_sidecars.py
config/: default.toml
results/: README.md  common_resolution_triplets.csv  dataset_resolution_sensitivity.csv  dataset_resolution_summary.parquet  file_level_errors.csv  scan_summary.json  validation_sample.csv
src/openneuro_voxels/: __init__.py  aggregate.py  cli.py  config.py  database.py  plotting.py  reporting.py  scan.py  validation.py
tests/: test_aggregation.py  test_bids_entities.py  test_nifti1.py  test_nifti2.py  test_partial_gzip.py  test_resume.py
