[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openneuro-voxels"
version = "0.1.0"
description = "Characterize raw BOLD voxel resolution across public OpenNeuro datasets."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "DVS Lab" }
]
dependencies = [
  "boto3>=1.34,<2",
  "botocore>=1.34,<2",
  "matplotlib>=3.8,<4",
  "nibabel>=5.2,<6",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "pyarrow>=15,<22",
  "rich>=13.7,<15",
  "tenacity>=8.2,<10",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "mypy>=1.10,<2",
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
]

[project.scripts]
openneuro-voxels = "openneuro_voxels.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "network: tests that touch live OpenNeuro or other network services",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
packages = ["openneuro_voxels"]
strict = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "boto3.*",
  "botocore.*",
  "nibabel.*",
  "matplotlib.*",
]
ignore_missing_imports = true
